improved css for index.html

--- a/index.html
+++ b/index.html
@@ -65,25 +65,24 @@
       </div>
     </nav>
     <div class="hero">
-      <div class="header">
-        <h1>Recipe Collection</h1>
-        <h5>
-          Find a variety of inspiring recipes that are easy,<br />
-          delicious, and healthy here
-        </h5>
+      <div class="header py-4">
+        <h1>[ServerName] Discord</h1>
+        <h3>
+          Home of [Server Name] Discord. Where you can find out about us or Appeal a Ban
+        </h3>
       </div>
     </div>
 
     <div class="container bodySection">
       <div class="row">
-        <div class="col-4 homeButtons">
-          <a class="trackButton" href="#">Track it here</a>
+        <div class="col-4 d-flex">
+          <a class="homeButton" href="#">Read About Server</a>
         </div>
-        <div class="col-4">
-          <a class="trackButton" href="#">Track it here</a>
+        <div class="col-4 d-flex">
+          <a class="homeButton" href="#">Appeal a Ban</a>
         </div>
-        <div class="col-4">
-          <a class="trackButton" href="#">Track it here</a>
+        <div class="col-4 d-flex">
+          <a class="homeButton" href="#">Give Us Feedback</a>
         </div>
       </div>
     </div>
@@ -92,11 +91,7 @@
       <div class="container-fluid footerSection">
         <div class="row p-3 g-2">
           <div class="col-md-4">
-            <img
-              src="/images/She Codes.svg"
-              alt="SheCodes Logo"
-              class="logo img-fluid"
-            />
+            <h3 class="brandName">[Sever Name] Discord</h3>
           </div>
 
           <div class="col-md-4 socmed">
@@ -125,7 +120,7 @@
             ></a>
           </div>
           <div class="col-md-4">
-            <p class="copyright">© 2021 SheCodes All rights reserved.</p>
+            <p class="copyright">© 2023 [Sever Name] Discord All rights reserved.</p>
           </div>
           <p class="open-source">
             this is an
