modified css for ban-appeal

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <a class="homeButton" href="#">Read About Server</a>
         </div>
         <div class="col-4 d-flex">
-          <a class="homeButton" href="#">Appeal a Ban</a>
+          <a class="homeButton" href="/ban-appeal.html">Appeal a Ban</a>
         </div>
         <div class="col-4 d-flex">
           <a class="homeButton" href="#">Give Us Feedback</a>
@@ -122,7 +122,7 @@
           <div class="col-md-4">
             <p class="copyright">© 2023 [Sever Name] Discord All rights reserved.</p>
           </div>
-          <p class="open-source">
+          <span class="open-source">
             this is an
             <a
               href="https://github.com/iosaney/portfolio-project"
@@ -131,7 +131,7 @@
               class="authorNote"
               >open-source page</a
             >
-          </p>
+          </span>
         </div>
       </div>
     </footer>
