--- a/ban-appeal.html
+++ b/ban-appeal.html
@@ -53,11 +53,13 @@
           id="navbarNavAltMarkup"
         >
           <div class="navbar-nav">
-            <a class="nav-link active" id="active-link" href="/index.html"
-              >Home</a
-            >
+            <a class="nav-link" href="/index.html">Home</a>
             <a class="nav-link" href="/about.html">About the Server</a>
-            <a class="nav-link" aria-current="page" href="/recipes.html"
+            <a
+              class="nav-link active"
+              id="active-link"
+              aria-current="page"
+              href="/recipes.html"
               >Appeal a Ban</a
             >
             <a class="nav-link" href="/contact.html">Contact</a>
@@ -86,7 +88,7 @@
           >
           <input
             type="text"
-            class="form-control mb-3"
+            class="form-control mb-4"
             id="discordID"
             placeholder="@birdman310"
           />
@@ -99,7 +101,7 @@
             >Why do you think you were banned?</label
           >
           <textarea
-            class="form-control mb-3"
+            class="form-control mb-4"
             id="exampleFormControlTextarea1"
             rows="3"
           ></textarea>
@@ -112,33 +114,30 @@
             >Why should your ban be lifted?</label
           >
           <textarea
-            class="form-control mb-3"
+            class="form-control mb-4"
             id="exampleFormControlTextarea1"
             rows="3"
           ></textarea>
         </div>
       </form>
       <div class="row">
-            <div class="col-6">
-              <button type="submit" class="submitButton">Submit</button>
-            </div>
+        <div class="col-6 d-flex">
+          <button type="submit" class="submitButton">Submit</button>
+        </div>
 
-            <div class="col-6">
-              <br />
-                <span>track</span><a class="trackButton" href="#">Track it here</a></div>
-            
-          </div>
+        <div class="col-6 d-flex justify-content-end">
+          <br />
+          <span class="trackDescription d-flex align-items-center">Already Appealed?</span>
+          <a class="trackButton" href="#">Track it here</a>
+        </div>
+      </div>
     </div>
 
-    <footer>
+<footer>
       <div class="container-fluid footerSection">
         <div class="row p-3 g-2">
           <div class="col-md-4">
-            <img
-              src="/images/She Codes.svg"
-              alt="SheCodes Logo"
-              class="logo img-fluid"
-            />
+            <h3 class="brandName">[Sever Name] Discord</h3>
           </div>
 
           <div class="col-md-4 socmed">
@@ -167,20 +166,19 @@
             ></a>
           </div>
           <div class="col-md-4">
-            <p class="copyright">© 2021 SheCodes All rights reserved.</p>
+            <p class="copyright">© 2023 [Sever Name] Discord All rights reserved.</p>
           </div>
+          <span class="open-source">
+            this is an
+            <a
+              href="https://github.com/iosaney/portfolio-project"
+              title="GitHub"
+              target="_blank"
+              class="authorNote"
+              >open-source page</a
+            >
+          </span>
         </div>
-
-        <p class="text-muted">
-          this is an
-          <a
-            href="https://github.com/iosaney/portfolio-project"
-            title="GitHub"
-            target="_blank"
-            class="authorNote"
-            >open-source page</a
-          >
-        </p>
       </div>
     </footer>
   </body>
