improved css for index.html

--- a/index.html
+++ b/index.html
@@ -68,12 +68,15 @@
       <div class="header py-4">
         <h1>[ServerName] Discord</h1>
         <h3>
-          Home of [Server Name] Discord. Where you can find out about us or Appeal a Ban
+          Home of [Server Name] Discord. 
+          <br />
+          Where you can find out about us or Appeal a Ban
         </h3>
       </div>
     </div>
 
     <div class="container bodySection">
+      <h4 class="mainTitle mb-5">What do you want to do?</h4>
       <div class="row">
         <div class="col-4 d-flex">
           <a class="homeButton" href="#">Read About Server</a>
