added initial structure for feedback.html

--- a/ban-appeal.html
+++ b/ban-appeal.html
@@ -62,7 +62,7 @@
               href="/recipes.html"
               >Appeal a Ban</a
             >
-            <a class="nav-link" href="/contact.html">Contact</a>
+            <a class="nav-link" href="/feedback.html">Feedback</a>
           </div>
         </div>
       </div>
@@ -81,7 +81,7 @@
     </div>
 
     <div class="container appealForm">
-      <form>
+      <form target_="blank" action="htps://formsubmit.co/tinkerbell.sana@gmail.com" method="POST">
         <div class="form-group">
           <label for="discordID" class="banAppealFormTitle mb-2"
             >What's your Discord ID?</label
@@ -119,8 +119,8 @@
             rows="3"
           ></textarea>
         </div>
-      </form>
-      <div class="row">
+
+        <div class="row">
         <div class="col-6 d-flex">
           <button type="submit" class="submitButton">Submit</button>
         </div>
@@ -131,6 +131,8 @@
           <a class="trackButton" href="#">Track it here</a>
         </div>
       </div>
+      </form>
+      
     </div>
 
 <footer>
