--- a/feedback.html
+++ b/feedback.html
@@ -52,44 +52,29 @@
           id="navbarNavAltMarkup"
         >
           <div class="navbar-nav">
-            <a class="nav-link active" id="active-link" href="/index.html"
+            <a class="nav-link" href="/index.html"
               >Home</a
             >
             <a class="nav-link" href="/about.html">About the Server</a>
             <a class="nav-link" aria-current="page" href="/ban-appeal.html"
               >Appeal a Ban</a
             >
-            <a class="nav-link" href="/feedback.html">Feedback</a>
+            <a class="nav-link active" id="active-link" href="/feedback.html">Feedback</a>
           </div>
         </div>
       </div>
     </nav>
-    <div class="hero">
-      <div class="header py-4">
-        <h1>[ServerName] Discord</h1>
-        <h3>
-          Home of [Server Name] Discord. 
-          <br />
-          Where you can find out about us or Appeal a Ban
-        </h3>
-      </div>
-    </div>
+    <container>
+<h1 class="my-5">Yearly Review</h1>
+<h4>Nisl faucibus quis urna nibh ut amet diam suscipit pretium massa sollicitudin in risus in
+sagittis nisl faucibus quis urna nibh ut amet diam suscipit pretium massa, sollicitudin in
+risus in. Sagittis.</h4>
 
-    <div class="container bodySection">
-      <h4 class="mainTitle mb-5">What do you want to do?</h4>
-      <div class="row">
-        <div class="col-4 d-flex">
-          <a class="homeButton" href="#">Read About Server</a>
-        </div>
-        <div class="col-4 d-flex">
-          <a class="homeButton" href="/ban-appeal.html">Appeal a Ban</a>
-        </div>
-        <div class="col-4 d-flex">
-          <a class="homeButton" href="/feedback.html">Give Us Feedback</a>
-        </div>
-      </div>
-    </div>
+    <button class="homeButton d-block my-5">Google Form</button>
+    <br />
+    <br />
 
+    </container>
     <footer>
       <div class="container-fluid footerSection">
         <div class="row p-3 g-2">
