initial structure for about.html

--- a/about.html
+++ b/about.html
@@ -30,7 +30,6 @@
     <link rel="stylesheet" href="/src/style.css" />
     <title>[ServerName] Discord - Homepage</title>
   </head>
-
   <body>
     <nav class="navbar navbar-expand-md">
       <div class="container-fluid mx-5 navBar">
@@ -53,13 +52,11 @@
           id="navbarNavAltMarkup"
         >
           <div class="navbar-nav">
-            <a class="nav-link" href="/index.html">Home</a>
-            <a class="nav-link" href="/about.html">About the Server</a>
-            <a
-              class="nav-link active"
-              id="active-link"
-              aria-current="page"
-              href="/recipes.html"
+            <a class="nav-link" href="/index.html"
+              >Home</a
+            >
+            <a class="nav-link active" id="active-link" href="/about.html">About the Server</a>
+            <a class="nav-link" aria-current="page" href="/ban-appeal.html"
               >Appeal a Ban</a
             >
             <a class="nav-link" href="/feedback.html">Feedback</a>
@@ -67,75 +64,70 @@
         </div>
       </div>
     </nav>
-    <div class="header">
-      <h1>Appeal a Ban</h1>
-      <h4 class="appeal-description">
-        so, you've been banned from the [Server Name] Discord; These things
-        happen. If you believe you're ready to join us again, or you were banned
-        unjustly, appeal it below.
-        <br />
-        <br />
-        After you submit, it shouldn't take us very tong to get back to you.
-        Once a decision is made your appeal number will update on the tacker.
-      </h4>
-    </div>
-
-    <div class="container appealForm">
-      <form target_="blank" action="htps://formsubmit.co/tinkerbell.sana@gmail.com" method="POST">
-        <div class="form-group">
-          <label for="discordID" class="banAppealFormTitle mb-2"
-            >What's your Discord ID?</label
-          >
-          <input
-            type="text"
-            class="form-control mb-4"
-            id="discordID"
-            placeholder="@birdman310"
+    <div class="container aboutMeContent">
+      <h1>About Us</h1>
+      <div class="row">
+        <div class="col-md-6 d-flex justify-content-end">
+          <img
+            class="img-fluid"
+            src="/src/CocoMoon_AlbumCover_web.jpg"
+            alt="Album Cover of Coco Moon"
           />
         </div>
+        <div class="col-md-6">
+          <h2 class="my-3">[Server Name] Discord</h2>
+          <p class="abtDescription">
+            Nisl faucibus quis urna nibh ut amet diam suscipit pretium massa
+            sollicitudin in risus in sagittis nisl faucibus quis urna nibh ut
+            amet diam suscipit pretium massa, sollicitudin in risus in.
+            Sagittis.
+          </p>
+          <div class="socialMedias d-flex">
+            <h6>Follow Us</h6>
+            <span class="abtSocmed">
+              <a class="socialMediaLinks" href="#" title="">
+                <i class="fa-brands fa-square-facebook"></i
+              ></a>
+              <a class="socialMediaLinks" href="#" title="">
+                <i class="fa-brands fa-instagram px-3"></i
+              ></a>
+              <a class="socialMediaLinks" href="#" title=""
+                ><i class="fa-brands fa-linkedin"></i></a
+            ></span>
+          </div>
 
-        <div class="form-group">
-          <label
-            for="exampleFormControlTextarea1"
-            class="banAppealFormTitle mb-2"
-            >Why do you think you were banned?</label
-          >
-          <textarea
-            class="form-control mb-4"
-            id="exampleFormControlTextarea1"
-            rows="3"
-          ></textarea>
         </div>
 
-        <div class="form-group">
-          <label
-            for="exampleFormControlTextarea1"
-            class="banAppealFormTitle mb-2"
-            >Why should your ban be lifted?</label
-          >
-          <textarea
-            class="form-control mb-4"
-            id="exampleFormControlTextarea1"
-            rows="3"
-          ></textarea>
-        </div>
-
-        <div class="row">
-        <div class="col-6 d-flex">
-          <button type="submit" class="submitButton">Submit</button>
-        </div>
-
-        <div class="col-6 d-flex justify-content-end">
-          <br />
-          <span class="trackDescription d-flex align-items-center">Already Appealed?</span>
-          <a class="trackButton" href="#">Track it here</a>
-        </div>
       </div>
-      </form>
-      
-    </div>
+      <div class="faqSection my-5">
+<h3>FAQ</h3>
+<div class="faqQAndA">
+<h4>Lorem Ipsum Rhoncus Turpis</h4>
+<p>ld ac lorem maecenas rhoncus lobortis turpis morbi. ld ut lobortis consectetur volutpat commodo mi suspendisse odio.</p>
+</div>
 
-<footer>
+
+<div class="faqQAndA">
+<h4>Lorem Ipsum Rhoncus Turpis</h4>
+<p>ld ac lorem maecenas rhoncus lobortis turpis morbi. ld ut lobortis consectetur volutpat commodo mi suspendisse odio.</p>
+</div>
+
+
+<div class="faqQAndA">
+<h4>Lorem Ipsum Rhoncus Turpis</h4>
+<p>ld ac lorem maecenas rhoncus lobortis turpis morbi. ld ut lobortis consectetur volutpat commodo mi suspendisse odio.</p>
+</div>
+
+
+<div class="faqQAndA">
+<h4>Lorem Ipsum Rhoncus Turpis</h4>
+<p>ld ac lorem maecenas rhoncus lobortis turpis morbi. ld ut lobortis consectetur volutpat commodo mi suspendisse odio.</p></div>
+</div>
+    </div>
+    
+
+
+    <footer>
       <div class="container-fluid footerSection">
         <div class="row p-3 g-2">
           <div class="col-md-4">
