--- a/feedback.html
+++ b/feedback.html
@@ -65,7 +65,7 @@
       </div>
     </nav>
     <container>
-<h1 class="my-5">Yearly Review</h1>
+<h1>Yearly Review</h1>
 <h4>Nisl faucibus quis urna nibh ut amet diam suscipit pretium massa sollicitudin in risus in
 sagittis nisl faucibus quis urna nibh ut amet diam suscipit pretium massa, sollicitudin in
 risus in. Sagittis.</h4>
