added netlify attribute to form

--- a/ban-appeal.html
+++ b/ban-appeal.html
@@ -81,7 +81,7 @@
     </div>
 
     <div class="container appealForm">
-      <form  netlify>
+      <form  name="banAppeal" method="POST" netlify>
         <div class="form-group">
           <label for="discordID" class="banAppealFormTitle mb-2"
             >What's your Discord ID?</label
