added media queries

--- a/ban-appeal.html
+++ b/ban-appeal.html
@@ -68,7 +68,7 @@
       </div>
     </nav>
     <div class="header">
-      <h1>Appeal a Ban</h1>
+      <h1 class="my-5">Appeal a Ban</h1>
       <h4 class="appeal-description">
         so, you've been banned from the [Server Name] Discord; These things
         happen. If you believe you're ready to join us again, or you were banned
@@ -130,10 +130,10 @@
           <button type="submit" class="submitButton">Submit</button>
         </div>
 
-        <div class="col-6 d-flex justify-content-end">
+        <div class="col-6 d-flex justify-content-end buttonsCombo">
           <br />
-          <span class="trackDescription d-flex align-items-center">Already Appealed?</span>
-          <a class="trackButton" href="#">Track it here</a>
+          <span class="trackDescription d-flex align-items-center">Already Appealed?
+          <a class="trackButton" href="#">Track it here</a></span>
         </div>
       </div>
       </form>
