--- a/feedback.html
+++ b/feedback.html
@@ -66,15 +66,17 @@
     </nav>
     <container>
 <h1>Yearly Review</h1>
-<h4>Nisl faucibus quis urna nibh ut amet diam suscipit pretium massa sollicitudin in risus in
+<h4 class="appeal-description">Nisl faucibus quis urna nibh ut amet diam suscipit pretium massa sollicitudin in risus in
 sagittis nisl faucibus quis urna nibh ut amet diam suscipit pretium massa, sollicitudin in
 risus in. Sagittis.</h4>
+<div class="d-flex mb-5">
 
-    <button class="homeButton d-block my-5">Google Form</button>
-    <br />
-    <br />
+    <a class="homeButton my-5" href="#">Google Form</a>
+
+</div>
 
     </container>
+
     <footer>
       <div class="container-fluid footerSection">
         <div class="row p-3 g-2">
