--- a/index.html
+++ b/index.html
@@ -76,15 +76,16 @@
     </div>
 
     <div class="container bodySection">
-      <h4 class="mainTitle mb-5">What do you want to do?</h4>
+      
+      <h4 class="mainTitle">What do you want to do?</h4>
       <div class="row">
-        <div class="col-4 d-flex">
+        <div class="col-md-4 d-flex">
           <a class="homeButton" href="#">Read About Server</a>
         </div>
-        <div class="col-4 d-flex">
+        <div class="col-md-4 d-flex">
           <a class="homeButton" href="/ban-appeal.html">Appeal a Ban</a>
         </div>
-        <div class="col-4 d-flex">
+        <div class="col-md-4 d-flex">
           <a class="homeButton" href="/feedback.html">Give Us Feedback</a>
         </div>
       </div>
