modified appeal ban form

--- a/ban-appeal.html
+++ b/ban-appeal.html
@@ -102,7 +102,7 @@
             >Why do you think you were banned?</label
           >
           <textarea
-          placeholder="doing ARG"
+          placeholder="Inciting Violence among members."
             name="reasonToBeBanned"
             class="form-control mb-4"
             id="exampleFormControlTextarea1"
@@ -117,7 +117,7 @@
             >Why should your ban be lifted?</label
           >
           <textarea
-          placeholder="cuz im 2 fab"
+          placeholder="It was the first time being in the server, I wasn't aware of the rules."
             name="reasonToBeUnbanned"
             class="form-control mb-4"
             id="exampleFormControlTextarea1"
