modified styling on about.html

--- a/about.html
+++ b/about.html
@@ -52,10 +52,10 @@
           id="navbarNavAltMarkup"
         >
           <div class="navbar-nav">
-            <a class="nav-link" href="/index.html"
-              >Home</a
+            <a class="nav-link" href="/index.html">Home</a>
+            <a class="nav-link active" id="active-link" href="/about.html"
+              >About the Server</a
             >
-            <a class="nav-link active" id="active-link" href="/about.html">About the Server</a>
             <a class="nav-link" aria-current="page" href="/ban-appeal.html"
               >Appeal a Ban</a
             >
@@ -70,7 +70,7 @@
         <div class="col-md-6 d-flex justify-content-end">
           <img
             class="img-fluid"
-            src="/src/CocoMoon_AlbumCover_web.jpg"
+            src="/src/cocomoon.png"
             alt="Album Cover of Coco Moon"
           />
         </div>
@@ -82,7 +82,7 @@
             amet diam suscipit pretium massa, sollicitudin in risus in.
             Sagittis.
           </p>
-          <div class="socialMedias d-flex">
+          <div class="socialMedias d-flex justify-content-evenly">
             <h6>Follow Us</h6>
             <span class="abtSocmed">
               <a class="socialMediaLinks" href="#" title="">
@@ -95,37 +95,45 @@
                 ><i class="fa-brands fa-linkedin"></i></a
             ></span>
           </div>
-
         </div>
-
       </div>
-      <div class="faqSection my-5">
-<h2>FAQ</h2>
-<div class="faqQAndA">
-<h3>Lorem Ipsum Rhoncus Turpis</h3>
-<p>ld ac lorem maecenas rhoncus lobortis turpis morbi. ld ut lobortis consectetur volutpat commodo mi suspendisse odio.</p>
-</div>
 
+      <ul class="faqSection my-5">
+        <h2>FAQ</h2>
+        <li class="faqQAndA">
+          <h3 class="questionSection">Lorem Ipsum Rhoncus Turpis</h3>
+          <p>
+            ld ac lorem maecenas rhoncus lobortis turpis morbi. ld ut lobortis
+            consectetur volutpat commodo mi suspendisse odio.
+          </p>
+        </li>
 
-<div class="faqQAndA">
-<h3>Lorem Ipsum Rhoncus Turpis</h3>
-<p>ld ac lorem maecenas rhoncus lobortis turpis morbi. ld ut lobortis consectetur volutpat commodo mi suspendisse odio.</p>
-</div>
+        <li class="faqQAndA">
+          <h3 class="questionSection">Lorem Ipsum Rhoncus Turpis</h3>
+          <p>
+            ld ac lorem maecenas rhoncus lobortis turpis morbi. ld ut lobortis
+            consectetur volutpat commodo mi suspendisse odio.
+          </p>
+        </li>
 
+        <li class="faqQAndA">
+          <h3 class="questionSection">Lorem Ipsum Rhoncus Turpis</h3>
+          <p>
+            ld ac lorem maecenas rhoncus lobortis turpis morbi. ld ut lobortis
+            consectetur volutpat commodo mi suspendisse odio.
+          </p>
+        </li>
 
-<div class="faqQAndA">
-<h3>Lorem Ipsum Rhoncus Turpis</h3>
-<p>ld ac lorem maecenas rhoncus lobortis turpis morbi. ld ut lobortis consectetur volutpat commodo mi suspendisse odio.</p>
-</div>
+        <li class="faqQAndA">
+          <h3 class="questionSection">Lorem Ipsum Rhoncus Turpis</h3>
+          <p>
+            ld ac lorem maecenas rhoncus lobortis turpis morbi. ld ut lobortis
+            consectetur volutpat commodo mi suspendisse odio.
+          </p>
+        </li>
+      </ul>
 
-
-<div class="faqQAndA">
-<h3>Lorem Ipsum Rhoncus Turpis</h3>
-<p>ld ac lorem maecenas rhoncus lobortis turpis morbi. ld ut lobortis consectetur volutpat commodo mi suspendisse odio.</p></div>
-</div>
     </div>
-    
-
 
     <footer>
       <div class="container-fluid footerSection">
@@ -160,7 +168,9 @@
             ></a>
           </div>
           <div class="col-md-4">
-            <p class="copyright">© 2023 [Sever Name] Discord All rights reserved.</p>
+            <p class="copyright">
+              © 2023 [Sever Name] Discord All rights reserved.
+            </p>
           </div>
           <span class="open-source">
             this is an
