--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <h4 class="mainTitle">What do you want to do?</h4>
       <div class="row">
         <div class="col-md-4 d-flex">
-          <a class="homeButton" href="#">Read About Server</a>
+          <a class="homeButton" href="/about.html">Read About Server</a>
         </div>
         <div class="col-md-4 d-flex">
           <a class="homeButton" href="/ban-appeal.html">Appeal a Ban</a>
